--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Kopi Kana — Kopi Karang Taruna </title>
+	<title>Kopi Kana — Kopi Karang Tarunaaa </title>
 	<meta name="description" content="Kopi Kana — biji kopi pilihan, dipanggang lokal. Pesan sekarang untuk rasa kopi yang kaya dan autentik.">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
